--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  "icons": { "16": "icon16.png",
+           "48": "icon48.png",
+          "128": "icon128.png" },
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/"
